# sdwan

./: .gitattributes  .gitignore  BUILD.md  README.md  README.zh-CN.md  install.sh  introduction.md  introduction2.md
.github/workflows/: build.yml  build2.yml
linux/: config.init  sitepi.service  sitepi.ubuntu
luci/: Makefile
luci/luasrc/controller/: sitepi.lua
luci/luasrc/model/cbi/: sitepi.lua
luci/luasrc/view/sitepi/: status.htm
luci/po/ja/: sitepi.po
luci/po/zh_Hans/: sitepi.po
luci/po/zh_Hant/: sitepi.po
luci/root/usr/share/rpcd/acl.d/: luci-app-sitepi.json
package/luci-app-sitepi/: Makefile
package/luci-app-sitepi/luasrc/controller/: sitepi.lua
package/luci-app-sitepi/luasrc/model/cbi/: sitepi.lua
package/luci-app-sitepi/luasrc/view/sitepi/: status.htm
package/luci-app-sitepi/po/ja/: sitepi.po
package/luci-app-sitepi/po/zh_Hans/: sitepi.po
package/luci-app-sitepi/po/zh_Hant/: sitepi.po
package/sitepi/: Makefile
package/sitepi/files/: 99-sitepi  firewall.sitepi  sitepi  sitepi.config  sitepi.init
windows/: Cargo.toml  build copy.rs  build.rs  version.rc
windows/src/: main.rs
