[package]
name = "sitepi"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "getrandom"] }
base64 = "0.13"
tokio = { version = "1.0", features = ["full"] } 
wireguard-nt = "0.5"
ipnet = "2.3"
bitflags = "2"
getrandom = "0.2"
libloading = "0.8"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis"
]}
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
rand = "0.8"
ctrlc = "3.4"
