[package]
name = "sitepi"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
wireguard-nt = "0.5"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "getrandom"] }
base64 = "0.22.1"
ipnet = "2.3"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
rand = "0.8"
ctrlc = "3.4"
